config/deploy/production/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: wishlist
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/part-of: wishlist
spec:
  # type: ClusterIP
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/part-of: wishlist
