config/deploy/production/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wishlist
  namespace: wishlist
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # external-dns.alpha.kubernetes.io/hostname: "wishin.app"
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/part-of: wishlist
spec:
  tls:
  - hosts:
    - wishin.app
    - www.wishin.app
    secretName: wishlist-tls
  rules:
  - host: "www.wishin.app"
    http:
      paths:
      - path: /
        backend:
          serviceName: wishlist
          servicePort: 8080
  - host: "wishin.app"
    http:
      paths:
      - path: /
        backend:
          serviceName: wishlist
          servicePort: 8080
