config/deploy/production/00-namespace.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: wishlist
#   labels:
#     app.kubernetes.io/name: wishlist
#     app.kubernetes.io/part-of: wishlist

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: wishlist
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
